fix: logo shift

--- a/app/components/UI/MovieLogo/MovieLogo.css
+++ b/app/components/UI/MovieLogo/MovieLogo.css
@@ -11,3 +11,9 @@
   line-height: 32px;
   margin-bottom: 30px;
 }
+
+.wrapper {
+  width: 500px;
+  height: 200px;
+  position: relative;
+}
